@startuml

title __OOP's Class Diagram__\n

  namespace hu.progmatic {
    class hu.progmatic.Film {
    }
  }
  

  namespace hu.progmatic {
    class hu.progmatic.HorrorFilm {
    }
  }
  

  namespace hu.progmatic {
    class hu.progmatic.Main {
    }
  }
  

  namespace hu.progmatic {
    class hu.progmatic.RomantikusFilm {
    }
  }
  

  namespace hu.progmatic {
    class hu.progmatic.Videoteka {
    }
  }
  

  namespace hu.progmatic {
    class hu.progmatic.WesternFilm {
    }
  }
  

  hu.progmatic.HorrorFilm -up-|> hu.progmatic.Film
  hu.progmatic.RomantikusFilm -up-|> hu.progmatic.Film
  hu.progmatic.WesternFilm -up-|> hu.progmatic.Film


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
